--- a/build.xml
+++ b/build.xml
@@ -19,6 +19,7 @@
     <target name="runjunit" depends="compile">
         <junit haltonfailure="true" printsummary="true" showoutput="yes">
             <test name="com.tax.SalesTaxAppTest" />
+            <test name="com.tax.ParserTest" />
             <classpath>
                 <pathelement location="build"/>
                 <path refid="classpath"/>
