Added packaging to the classes

--- a/build.xml
+++ b/build.xml
@@ -19,9 +19,9 @@
     <target name="runjunit" depends="compile">
         <junit haltonfailure="true" printsummary="true" showoutput="yes">
             <test name="com.tax.SalesTaxAppTest" />
-            <test name="com.tax.ParserTest" />
-            <test name="com.tax.BasketTest" />
-            <test name="com.tax.ItemTest" />
+            <test name="com.tax.helper.ParserTest" />
+            <test name="com.tax.controller.BasketTest" />
+            <test name="com.tax.model.ItemTest" />
             <classpath>
                 <pathelement location="build"/>
                 <path refid="classpath"/>
